Update README with more information.
Some of this is speculative at present.